<resources>
    <string name="app_name">Smart Fashion</string>

    <!--About-->

    <string name="about">About</string>
    <string name="about_contx_version">Version: 1.0.0</string>
    <string name="about_contx_by">By l2team</string>

    <!--Support-->

    <string name="support">Support</string>
    <string name="sp_feedback">Give ours about your thinking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Sync-->

</resources>
